[package]
name = "cranelisp"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.3"
clap = "3.0.0-beta"
cranelift = "0.78.0"
cranelift-module = "0.78.0"
cranelift-jit = "0.78.0"
fnv = "1.0.7"
rustyline = "9.0"
rustyline-derive = "0.5"
somok = "1.1"
thiserror = "1.0"
smol_str = "0.1.21"
kmp = "0.1.1"
once_cell = "1.8.0"
target-lexicon = "0.12.2"

[features]
