[package]
name = "cranelisp"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1"
clap = { version = "3.0", features = ["derive"] }
# cranelift = "0.78.0"
# cranelift-module = "0.78.0"
# cranelift-jit = "0.78.0"
fnv = "1.0"
rustyline = "9.0"
rustyline-derive = "0.5"
somok = "1.2"
thiserror = "1.0"
smol_str = "0.1"
once_cell = "1.8"
# target-lexicon = "0.12"
indexmap = "1.8"
slotmap = "1.0"
tinyvec = "1.5"
