[package]
name = "cranelisp"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1"
clap = { version = "3.0", features = ["derive"] }
fnv = "1.0"
rustyline = "9.0"
rustyline-derive = "0.6"
somok = "1.2"
thiserror = "1.0"
smol_str = "0.1"
once_cell = "1.8"
indexmap = "1.8"
slotmap = "1.0"
tinyvec = "1.5"
cl-alloc = { path = "cl-alloc" }
enumn = "0.1.3"
